<resources>
    <string name="app_name">NewsApp40</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="fragment_person">Person</string>
    <string name="fragment_phone">Phone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_number">Input Number</string>
    <string name="input_code">Input Code</string>
    <string name="verification">verification</string>
</resources>