<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/phone_fragment">

    <fragment
        android:id="@+id/navigation_home"
        android:name="kg.geektech.newsapp40.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="kg.geektech.newsapp40.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="kg.geektech.newsapp40.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/newsFragment"
        android:name="kg.geektech.newsapp40.NewsFragment"
        android:label="fragment_news"
        tools:layout="@layout/fragment_news" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="kg.geektech.newsapp40.person.PersonFragment"
        android:label="@string/fragment_person"
        tools:layout="@layout/fragment_person" />
    <fragment
        android:id="@+id/boardFragment"
        android:name="kg.geektech.newsapp40.ui.board.BoardFragment"
        android:label="fragment_board"
        tools:layout="@layout/fragment_board" />

    <fragment
        android:id="@+id/phone_fragment"
        android:name="kg.geektech.newsapp40.phone.PhoneFragment"
        android:label="@string/fragment_phone"
        tools:layout="@layout/fragment_phone" >


    </fragment>

</navigation>